# khepri

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  LICENSE-Apache-2.0  MODULE.bazel  README.md  WORKSPACE.bazel  _head.html  edoc-extensions.css  edoc-info  erlang_ls.config  eunit.bzl  index.html  khepri.html  khepri_adv.html  khepri_app.html  khepri_cluster.html  khepri_condition.html  khepri_event_handler.html  khepri_evf.html  khepri_export_erlang.html  khepri_fun.html  khepri_import_export.html  khepri_machine.html  khepri_path.html  khepri_payload.html  khepri_prefix_tree.html  khepri_projection.html  khepri_sproc.html  khepri_sup.html  khepri_tx.html  khepri_tx_adv.html  khepri_utils.html  mix.exs  modules-frame.html  overview-summary.html  overview.edoc  prism.js  rebar.config  (+1 more)
.github/: codecov.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: docs.yaml  release.yaml  test-and-release.yaml  test-job.yaml  test.yaml  trigger-benchmark.yaml
chunks/: khepri.chunk  khepri_adv.chunk  khepri_app.chunk  khepri_cluster.chunk  khepri_condition.chunk  khepri_config.chunk  khepri_config_v0.chunk  khepri_event_handler.chunk  khepri_evf.chunk  khepri_export_erlang.chunk  khepri_fun.chunk  khepri_import_export.chunk  khepri_machine.chunk  khepri_machine_v0.chunk  khepri_path.chunk  khepri_pattern_tree.chunk  khepri_payload.chunk  khepri_prefix_tree.chunk  khepri_projection.chunk  khepri_sproc.chunk  khepri_sup.chunk  khepri_tree.chunk  khepri_tx.chunk  khepri_tx_adv.chunk  khepri_utils.chunk
doc/: _head.html  overview.edoc  prism.css  stylesheet.css
docs/: overview.md
include/: khepri.hrl
lib/: khepri.ex
src/: edoc.hrl  internal.hrl  khepri.app.src  khepri.erl  khepri_adv.erl  khepri_app.erl  khepri_bang.hrl  khepri_batch.erl  khepri_batch_adv.erl  khepri_batch_proxies_sup.erl  khepri_batch_proxy.erl  khepri_cache_owner.erl  khepri_cluster.erl  khepri_cluster.hrl  khepri_command.erl  khepri_command_adv.erl  khepri_condition.erl  khepri_config.erl  khepri_config.hrl  khepri_config_v0.erl  khepri_edoc_export.erl  khepri_edoc_wrapper.erl  khepri_error.hrl  khepri_event_handler.erl  khepri_evf.erl  khepri_evf.hrl  khepri_export_erlang.erl  khepri_fun.erl  khepri_fun.hrl  khepri_fun_cache.erl  khepri_import_export.erl  khepri_kws.erl  khepri_lock.erl  khepri_lock.hrl  khepri_machine.erl  khepri_machine.hrl  khepri_machine_v0.erl  khepri_machine_v1.erl  khepri_mfa.awk  khepri_mfa.erl  (+20 more)
test/: advanced_delete.erl  advanced_get.erl  advanced_put.erl  advanced_tx_delete.erl  advanced_tx_get.erl  advanced_tx_put.erl  app.erl  async_option.erl  bang_functions.erl  batch_command.erl  cached_leader.erl  cluster_SUITE.erl  conditions.erl  cth_log_redirect_any_domains.erl  db_info.erl  delete_command.erl  display_tree.erl  export.erl  export_erlang.erl  export_helper.erl  favor_option.erl  fence.erl  fun_extraction_SUITE.erl  heavy_load_SUITE.erl  helpers.erl  helpers.hrl  keep_until_conditions.erl  keep_while_conditions.erl  khepri_test.exs  line_chunk.erl  locks.erl  machine_code_called_from_ra.erl  mfa_to_fun.awk  mfa_to_fun.erl  mod_used_for_transactions.erl  non_versioned_commands.erl  path_operations.erl  path_transform.erl  pattern_tree.erl  prefix_tree.erl  (+25 more)
