module(
    name = "khepri",
    version = "0.4.3",
)

bazel_dep(
    name = "rules_erlang",
    version = "3.3.0",
)

erlang_package = use_extension(
    "@rules_erlang//bzlmod:extensions.bzl",
    "erlang_package",
)

erlang_package.hex_package(
    name = "aten",
    version = "0.5.8",
    sha256 = "64d40a8cf0ddfea4e13af00b7327f0925147f83612d0627d9506cbffe90c13ef",
)

erlang_package.hex_package(
    name = "gen_batch_server",
    sha256 = "c3e6a1a2a0fb62aee631a98cfa0fd8903e9562422cbf72043953e2fb1d203017",
    version = "0.8.8",
)

erlang_package.hex_package(
    name = "seshat",
    sha256 = "20d820acbeef9d07298ee863d0c9d06f8e620acba100939ebb2925e4d6b0dfc7",
    version = "0.3.2",
)

erlang_package.hex_package(
    name = "ra",
    version = "2.1.0",
    sha256 = "24001b370c23690af3fe42ddca353c71c45d1edc1a0e56f9c1bf30bd4c37d14e",
)

use_repo(
    erlang_package,
    "aten",
    "gen_batch_server",
    "seshat",
    "ra",
)
